next-auth-google

--- a/tinder/.env
+++ b/tinder/.env
@@ -1,1 +1,5 @@
 MONGODB_URI=mongodb+srv://bolex:1234@cluster0.s48qglz.mongodb.net/next-tinder?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID=511762272867-m2pfnqofdlop3es4b1tljp2723667c3g.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+NEXTAUTH_URL=http://localhost:3000
+JWT_SECRET=fUSfcqaQVDQulvblF4dB6MVVpCN9k+HAchwEdldlSks=
