--- a/tinder/package.json
+++ b/tinder/package.json
@@ -16,6 +16,8 @@
     "eslint-config-next": "^13.1.1",
     "mongoose": "^6.8.3",
     "next": "13.1.1",
+    "next-auth": "^4.18.8",
+    "next-cookies": "^2.0.3",
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^6.0.0",
     "postcss": "^8.4.21",
