--- a/tinder/package.json
+++ b/tinder/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "eslint": "^8.31.0",
@@ -17,7 +18,6 @@
     "mongoose": "^6.8.3",
     "next": "13.1.1",
     "next-auth": "^4.18.8",
-    "next-cookies": "^2.0.3",
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^6.0.0",
     "postcss": "^8.4.21",
