--- a/tinder/.env
+++ b/tinder/.env
@@ -3,3 +3,5 @@ GOOGLE_CLIENT_ID=511762272867-m2pfnqofdlop3es4b1tljp2723667c3g.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
 JWT_SECRET=fUSfcqaQVDQulvblF4dB6MVVpCN9k+HAchwEdldlSks=
+SPOTIFY_CLIENT_ID=8136e40ba3434c3e9c493fd8cb7a4aa8
+SPOTIFY_CLIENT_SECRET=ea73769123aa41d8b139ee20ee18fff8
