--- a/tinder/.env
+++ b/tinder/.env
@@ -5,3 +5,6 @@ NEXTAUTH_URL=http://localhost:3000
 JWT_SECRET=fUSfcqaQVDQulvblF4dB6MVVpCN9k+HAchwEdldlSks=
 SPOTIFY_CLIENT_ID=8136e40ba3434c3e9c493fd8cb7a4aa8
 SPOTIFY_CLIENT_SECRET=ea73769123aa41d8b139ee20ee18fff8
+CLOUD_NAME_CLOUDINARY=dnieujc6g
+API_KEY_CLOUDINARY=573624652258629
+API_SECRET_CLOUDINARY=hPuUQ5t53Unr2DkdwdSlsuTzmzQ
