--- a/tinder/package.json
+++ b/tinder/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
+    "cloudinary": "^1.33.0",
     "eslint": "^8.31.0",
     "eslint-config-next": "^13.1.1",
     "mongoose": "^6.8.3",
