--- a/tinder/package.json
+++ b/tinder/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@react-google-maps/api": "^2.17.1",
     "@reduxjs/toolkit": "^1.9.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
