--- a/tinder/package.json
+++ b/tinder/package.json
@@ -30,6 +30,8 @@
     "react-router-dom": "^6.6.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "sweetalert2": "^11.6.16",
     "tailwindcss": "^3.2.4"
   }
