--- a/tinder/package.json
+++ b/tinder/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "socket.io": "^4.5.4",
