--- a/tinder/package.json
+++ b/tinder/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.8.3",
     "next": "13.1.1",
     "next-auth": "^4.18.8",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^6.0.0",
     "postcss": "^8.4.21",
